--- a/Server/BlazorWebAssemblySignalRApp.Server.csproj
+++ b/Server/BlazorWebAssemblySignalRApp.Server.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0-rc.2.21480.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="5.0.11" />
   </ItemGroup>
 
   <ItemGroup>
